cmake_minimum_required(VERSION 4.0)
project(striver_dsa)

set(CMAKE_CXX_STANDARD 14)

include_directories(linked_lists)

add_executable(striver_dsa
        arrays/3sum.cpp
        arrays/count_subarray_k.cpp
        arrays/count_subarray_opt.cpp
        arrays/count_subarrays.cpp
        arrays/longest_consec.cpp
        arrays/longest_subarr_sum.cpp
        arrays/merge_overlapping.cpp
        arrays/moores_majority.cpp
        arrays/move_zeroes_end.cpp
        arrays/move_zeroes_opt.cpp
        arrays/next_perm.cpp
        arrays/rem_dup.cpp
        arrays/rotate_by_k.cpp
        arrays/rotate_by_one.cpp
        arrays/sec_largest.cpp
        arrays/set_zeroes_matrix.cpp
        arrays/setZeroes.cpp
        arrays/sort_0_1_2_opt.cpp
        arrays/tempCodeRunnerFile.cpp
        arrays/union.cpp
        binarySearch.cpp/iterative.cpp
        binarySearch.cpp/lower_bound.cpp
        binarySearch.cpp/recursive.cpp
        binarySearch.cpp/upper_bound.cpp
        cp/histogram.cpp
        cp-div3/1.cpp
        cp-div3/2.cpp
        hashing/1.cpp
        hashing/map.cpp
        linked_lists/doubly_linked_lists/1.cpp
        linked_lists/1.cpp
        linked_lists/addingOneinLL.cpp
        linked_lists/addTwoNumbers.cpp
        linked_lists/deletion_in_LL.cpp
        linked_lists/heap_stack_diff.cpp
        linked_lists/Insertion_in_LL.cpp
        linked_lists/linked_list.hpp
        linked_lists/reverseInGroup.cpp
        linked_lists/rotateList.cpp
        linked_lists/sortLL.cpp
        linked_lists/tempCodeRunnerFile.cpp
        oa/1.cpp
        oa/2.cpp
        oa/3.cpp
        PrefixSum/sum_of_absolute_diff.cpp
        queue/implement/queue_using_arr.cpp
        recursion/1.cpp
        recursion/fact.cpp
        recursion/reverse.cpp
        recursion/sum.cpp
        recursion/test.cpp
        Recursion_fin/basic/1ton.cpp
        Recursion_fin/basic/fact.cpp
        Recursion_fin/basic/maze.cpp
        Recursion_fin/basic/PreInPost.cpp
        Recursion_fin/basic/stair.cpp
        Recursion_fin/basic/tower_of_hanoi.cpp
        Recursion_fin/intermediate/gen_all_bin_string.cpp
        Recursion_fin/intermediate/gen_parenthesis.cpp
        Recursion_fin/intermediate/subsequence_count.cpp
        Recursion_fin/intermediate/subsequence_sum.cpp
        Recursion_fin/intermediate/subsequence_sum_1.cpp
        Recursion_fin/striver_qs/combinations-2.cpp
        Recursion_fin/striver_qs/combinations.cpp
        Recursion_fin/striver_qs/combinations_2_method_2.cpp
        Recursion_fin/striver_qs/kth_Lexi.cpp
        Recursion_fin/striver_qs/n-queens.cpp
        Recursion_fin/striver_qs/permutations.cpp
        Recursion_fin/striver_qs/printing_all_subsets.cpp
        Recursion_fin/striver_qs/rat_in_a_maze.cpp
        Recursion_fin/striver_qs/subset-2_lc_90.cpp
        Recursion_fin/striver_qs/subset_sum.cpp
        Recursion_fin/striver_qs/test.cpp
        Recursion_fin/delete_middle_stack.cpp
        Recursion_fin/sort_a_stack.cpp
        Recursion_fin/sort_arr.cpp
        revise/kadane_algo.cpp
        sorting/mergeSort.cpp
        sorting/quickSort.cpp
        sorting/selection.cpp
        stack/implementation/stack_using_arr.cpp
        strings/no_of_substrings.cpp
        strings/space_check.cpp
        stack/implementation/stakc_using_LL.cpp
        queue/implement/queue_using_linked_list.cpp
        queue/implement/queue_using_stack.cpp
        stack/monotonic_stack/NGE.cpp
        stack/monotonic_stack/nge_2.cpp
)
